remove progress bars, add row of skills

--- a/index.html
+++ b/index.html
@@ -125,64 +125,64 @@
                             Software Developer @ <a href="https://uncommoncore.io" target="_blank">Uncommon Core</a><br><br>
                             Author @ <a href="http://www.square1system.com" target="_blank">Square1™</a><br><br>
                             </p>
-                        <a href="https://ghoozie.tk/oliver_resume.pdf" class="btn btn-fill" target="_blank">View Resumé</a>
+                        <a href="https://ghoozie.tk/oliver_resume.pdf" class="btn btn-fill" target="_blank" style="margin-bottom:80px;">View Resumé</a>
                     </div>
                 </div>
             </div>
         </section><!-- /.secton-about -->
 
-        <section class="site-section section-skills">
-            <div class="container">
-                <div class="text-center">
-                    <h3>Coding Skills</h3>
-                    <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="skill">
-                            <h4>Python</h4>
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="100"></div><!-- /.progress-bar -->
-                            </div><!-- /.progress -->
-                        </div><!-- /.skill -->
-                        <div class="skill">
-                            <h4>php</h4>
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="80"></div><!-- /.progress-bar -->
-                            </div><!-- /.progress -->
-                        </div><!-- /.skill -->
-                    </div>
-                    <div class="col-md-4">
-                        <div class="skill">
-                            <h4>HTML/CSS</h4>
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="90"></div><!-- /.progress-bar -->
-                            </div><!-- /.progress -->
-                        </div><!-- /.skill -->
-                        <div class="skill">
-                            <h4>Neural Networks</h4>
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="45"></div><!-- /.progress-bar -->
-                            </div><!-- /.progress -->
-                        </div><!-- /.skill -->
-                    </div>
-                    <div class="col-md-4">
-                        <div class="skill">
-                            <h4>SQL</h4>
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="90"></div><!-- /.progress-bar -->
-                            </div><!-- /.progress -->
-                        </div><!-- /.skill -->
-                        <div class="skill">
-                            <h4>Kubernetes</h4>
-                            <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="30"></div><!-- /.progress-bar -->
-                            </div><!-- /.progress -->
-                        </div><!-- /.skill -->
-                    </div>
-                </div>
-            </div>
-        </section><!-- /.secton-skills -->
+<!--        <section class="site-section section-skills">-->
+<!--            <div class="container">-->
+<!--                <div class="text-center">-->
+<!--                    <h3>Coding Skills</h3>-->
+<!--                    <img src="assets/img/lines.svg" class="img-lines" alt="lines">-->
+<!--                </div>-->
+<!--                <div class="row">-->
+<!--                    <div class="col-md-4">-->
+<!--                        <div class="skill">-->
+<!--                            <h4>Python</h4>-->
+<!--                            <div class="progress">-->
+<!--                                <div class="progress-bar" role="progressbar" data-transitiongoal="100"></div>&lt;!&ndash; /.progress-bar &ndash;&gt;-->
+<!--                            </div>&lt;!&ndash; /.progress &ndash;&gt;-->
+<!--                        </div>&lt;!&ndash; /.skill &ndash;&gt;-->
+<!--                        <div class="skill">-->
+<!--                            <h4>php</h4>-->
+<!--                            <div class="progress">-->
+<!--                                <div class="progress-bar" role="progressbar" data-transitiongoal="80"></div>&lt;!&ndash; /.progress-bar &ndash;&gt;-->
+<!--                            </div>&lt;!&ndash; /.progress &ndash;&gt;-->
+<!--                        </div>&lt;!&ndash; /.skill &ndash;&gt;-->
+<!--                    </div>-->
+<!--                    <div class="col-md-4">-->
+<!--                        <div class="skill">-->
+<!--                            <h4>HTML/CSS</h4>-->
+<!--                            <div class="progress">-->
+<!--                                <div class="progress-bar" role="progressbar" data-transitiongoal="90"></div>&lt;!&ndash; /.progress-bar &ndash;&gt;-->
+<!--                            </div>&lt;!&ndash; /.progress &ndash;&gt;-->
+<!--                        </div>&lt;!&ndash; /.skill &ndash;&gt;-->
+<!--                        <div class="skill">-->
+<!--                            <h4>Neural Networks</h4>-->
+<!--                            <div class="progress">-->
+<!--                                <div class="progress-bar" role="progressbar" data-transitiongoal="45"></div>&lt;!&ndash; /.progress-bar &ndash;&gt;-->
+<!--                            </div>&lt;!&ndash; /.progress &ndash;&gt;-->
+<!--                        </div>&lt;!&ndash; /.skill &ndash;&gt;-->
+<!--                    </div>-->
+<!--                    <div class="col-md-4">-->
+<!--                        <div class="skill">-->
+<!--                            <h4>SQL</h4>-->
+<!--                            <div class="progress">-->
+<!--                                <div class="progress-bar" role="progressbar" data-transitiongoal="90"></div>&lt;!&ndash; /.progress-bar &ndash;&gt;-->
+<!--                            </div>&lt;!&ndash; /.progress &ndash;&gt;-->
+<!--                        </div>&lt;!&ndash; /.skill &ndash;&gt;-->
+<!--                        <div class="skill">-->
+<!--                            <h4>Kubernetes</h4>-->
+<!--                            <div class="progress">-->
+<!--                                <div class="progress-bar" role="progressbar" data-transitiongoal="30"></div>&lt;!&ndash; /.progress-bar &ndash;&gt;-->
+<!--                            </div>&lt;!&ndash; /.progress &ndash;&gt;-->
+<!--                        </div>&lt;!&ndash; /.skill &ndash;&gt;-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </section>&lt;!&ndash; /.secton-skills &ndash;&gt;-->
 
         <section id="service" class="site-section section-services overlay text-center">
             <div class="container">
@@ -234,7 +234,33 @@
                         </div><!-- /.service -->
                     </div>
                 </div>
+                
 <!-- Third Row of Services -->
+                <div class="row">
+                    <div class="col-md-12">
+                    <br><br>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="service">
+                            <img src="assets/img/flask-color.png" width="auto" height="55" alt="Flask Web Framework">
+                            <h4>Python Flask</h4>
+                        </div><!-- /.service -->
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="service">
+                            <img src="assets/img/docker-compose.jpg" width="auto" height="55" alt="composer">
+                            <h4>Composer</h4>
+                        </div><!-- /.service -->
+                    </div>
+<!--                    <div class="col-sm-4">-->
+<!--                        <div class="service">-->
+<!--                            <img src="assets/img/mysql-logo.png" width="auto" height="55" alt="MySQL">-->
+<!--                            <h4>MySQL</h4>-->
+<!--                        </div>&lt;!&ndash; /.service &ndash;&gt;-->
+<!--                    </div>-->
+<!--                </div>-->
+
+<!-- Fourth Row of Services -->
 <!--                <div class="row">-->
 <!--                    <div class="col-md-12">-->
 <!--                    <br><br>-->
@@ -343,16 +369,16 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="10" data-speed="2000">0</p>
-                        <h4>Years Experience<br><br>Health & Fitness</h4>
+                        <p class="counter start" data-to="2" data-speed="1000">0</p>
+                        <h4><br>Years Experience<br><br>Software Development</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="2" data-speed="1000">0</p>
-                        <h4>Professional Fields<br>+<br>Collegiate Varsity Sports</h4>
+                        <p class="counter start" data-to="5" data-speed="1000">0</p>
+                        <h4><br>Web Applications<br><br>Delivered</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
                         <p class="counter start" data-to="100" data-speed="1500">0</p>
-                        <h4>Percent Committed!<br><br>Inquire Below:</h4>
+                        <h4><br>Percent Committed!<br><br>Inquire Below:</h4>
                     </div>
                 </div>
             </div>
