--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-md-6 ghoozie-text-bg" style="text-align:center;">
+                <div class="col-md-6 ghoozie-text-bg" style="text-align:center;margin-top:40px;">
                     <h1 class="main-name">Oliver Terrell</h1>
                     <div class="page-scroll">
                         <p class="job-title">Software Developer/Co-Founder of Greenstar Group</p>
@@ -234,7 +234,7 @@
                         </div><!-- /.service -->
                     </div>
                 </div>
-                
+
 <!-- Third Row of Services -->
                 <div class="row">
                     <div class="col-md-12">
