--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     </div>
                 </div>
             
-                <div class="col-md-6" style="margin-right:auto;margin-left:auto;">
+                <div class="col-md-6 front-pic">
                     <img src="assets/img/oliver.jpg" alt="oliver-terrell" class="img-fluid" style="border:3px solid #fff8e7;">
                 </div>
 
