--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/php-logo.jpg" width="auto" height="55" alt="php">
-                            <h4>PHP</h4>
+                            <img src="assets/img/react.png" width="auto" height="55" alt="ReactJS">
+                            <h4>React</h4>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
@@ -213,12 +213,43 @@
 <!-- Second Row of Services -->
                 <div class="row">
                     <div class="col-md-12">
-                    <br><br>
+                        <br><br>
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/selenium-logo.png" width="auto" height="55" alt="selenium">
-                            <h4>Selenium</h4>
+                            <img src="assets/img/flask.png" width="auto" height="55" alt="Flask Web Framework">
+                            <h4>Flask</h4>
+                        </div><!-- /.service -->
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="service">
+                            <img src="assets/img/php-logo.jpg" width="auto" height="55" alt="php">
+                            <h4>PHP</h4>
+                        </div><!-- /.service -->
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="service">
+                            <img src="assets/img/javascript.png" width="auto" height="55" alt="javascript">
+                            <h4>Javascript</h4>
+                        </div><!-- /.service -->
+                    </div>
+                </div>
+
+<!-- Third Row of Services -->
+                <div class="row">
+                    <div class="col-md-12">
+                        <br><br>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="service">
+                            <img src="assets/img/docker-logo.png" width="auto" height="55" alt="docker">
+                            <h4>Docker</h4>
+                        </div><!-- /.service -->
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="service">
+                            <img src="assets/img/docker-compose.jpg" width="auto" height="55" alt="compose">
+                            <h4>Composer</h4>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
@@ -227,38 +258,7 @@
                             <h4>Kubernetes</h4>
                         </div><!-- /.service -->
                     </div>
-                    <div class="col-sm-4">
-                        <div class="service">
-                            <img src="assets/img/docker-logo.png" width="auto" height="55" alt="docker">
-                            <h4>Docker</h4>
-                        </div><!-- /.service -->
-                    </div>
                 </div>
-
-<!-- Third Row of Services -->
-                <div class="row">
-                    <div class="col-md-12">
-                    <br><br>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="service">
-                            <img src="assets/img/flask-color.png" width="auto" height="55" alt="Flask Web Framework">
-                            <h4>Python Flask</h4>
-                        </div><!-- /.service -->
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="service">
-                            <img src="assets/img/docker-compose.jpg" width="auto" height="55" alt="composer">
-                            <h4>Composer</h4>
-                        </div><!-- /.service -->
-                    </div>
-<!--                    <div class="col-sm-4">-->
-<!--                        <div class="service">-->
-<!--                            <img src="assets/img/mysql-logo.png" width="auto" height="55" alt="MySQL">-->
-<!--                            <h4>MySQL</h4>-->
-<!--                        </div>&lt;!&ndash; /.service &ndash;&gt;-->
-<!--                    </div>-->
-<!--                </div>-->
 
 <!-- Fourth Row of Services -->
 <!--                <div class="row">-->
