--- a/index.html
+++ b/index.html
@@ -373,8 +373,8 @@
                         <h4><br>Years Experience<br><br>Software Development</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="5" data-speed="1000">0</p>
-                        <h4><br>Web Applications<br><br>Delivered</h4>
+                        <p class="counter start" data-to="3" data-speed="1000">0</p>
+                        <h4><br>Web Applications<br><br>Deployed</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
                         <p class="counter start" data-to="100" data-speed="1500">0</p>
