--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
 </head>
 <body>
 
-    <div id="intro"></div>
     <!-- Core React JS -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
@@ -64,7 +63,12 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <!-- Component JS -->
-    <script type="text/babel" src='static/js/crm_index.js'></script>
+    <script type="text/babel" src='./index.js'></script>
+
+    
+    <!-- ReactDOM intro -->
+    <div id="Intro"></div>
+
 
     <main id="main" class="site-main">
 
