Revert "testing react"
This reverts commit bbcfdeb27284317b4ff73edcea684d1a4798fff3.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 </head>
 <body>
 
+    <div id="intro"></div>
     <!-- Core React JS -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
@@ -63,12 +64,7 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <!-- Component JS -->
-    <script type="text/babel" src='./index.js'></script>
-
-    
-    <!-- ReactDOM intro -->
-    <div id="Intro"></div>
-
+    <script type="text/babel" src='static/js/crm_index.js'></script>
 
     <main id="main" class="site-main">
 
