--- a/react/Rindex.html
+++ b/react/Rindex.html
@@ -19,8 +19,13 @@
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 
+    <!-- Tools JS -->
+    <script type="text/babel" src="./tools.js"></script>
+
     <!-- Component JS -->
     <script type="text/babel" src="./components/skills.js"></script>
+    <script type="text/babel" src="./components/projects.js"></script>
+    <script type="text/babel" src="./components/demo.js"></script>
     <script type="text/babel" src="./components/index.js"></script>
 
 
