--- a/react/Rindex.html
+++ b/react/Rindex.html
@@ -4,11 +4,15 @@
     <title>ghoozie</title>
     <link rel="stylesheet" href="./index.css" />
 
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 </head>
 
 <body>
 
     <div id="ghoozie"></div>
+
 
     <!-- Babel JS for transpiling -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
