hooks can be used
deconstruct via React.useState(n) for use from CDN

--- a/react/Rindex.html
+++ b/react/Rindex.html
@@ -4,6 +4,9 @@
     <title>ghoozie</title>
     <link rel="stylesheet" href="./index.css" />
 
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon.ico">
+
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
@@ -19,9 +22,10 @@
 
 
     <!-- Core React JS -->
-    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+    <!-- Note: when deploying, replace "development.js" with "production.min.js" -->
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+
 
     <!-- Tools JS -->
     <script type="text/babel" src="./tools.js"></script>
