fun with states
props seem bulky

--- a/react/Rindex.html
+++ b/react/Rindex.html
@@ -33,7 +33,7 @@
     <!-- Component JS -->
     <script type="text/babel" src="./components/skills.js"></script>
     <script type="text/babel" src="./components/projects.js"></script>
-    <script type="text/babel" src="./components/demo.js"></script>
+    <script type="text/babel" src="./components/states.js"></script>
     <script type="text/babel" src="./components/index.js"></script>
 
 
