--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="clearfix visible-xxs"></div>
                         <a href="https://www.linkedin.com/in/oliver-terrell/" class="btn btn-primary" target="_blank">LinkedIn</a>
                         <br><br>
-                        <div onclick="goReact()"> () => {this.comingSoon()} </div>
+                        <div onclick="goReact()"> () => this.comingSoon() </div>
                     </div>
                 </div>
             
