--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -554,9 +554,9 @@
         function goReact() {
             var loca = window.location.href;
             if (loca.includes('localhost')) {
-                window.location.replace(loca.slice(0,23) + 'react/Rindex.html');
+                window.location.assign(loca.slice(0,22) + 'react/Rindex.html');
             } else {
-                window.location.replace('https://ghoozie.tk/react/Rindex.html');
+                window.location.assign('https://ghoozie.tk/react/Rindex.html');
             }
         }
     </script>
