turned off long story

--- a/phantom/index.html
+++ b/phantom/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		
+
 		<!-- Favicon -->
 		<link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicon.ico">
 		<link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon.ico">
@@ -60,7 +60,7 @@
 								<p>I am a software engineer and web application developer. I studied undergraduate at Carnegie Mellon University, class of 2019. Click below to learn more about me, my projects, or my professional experience!</p>
 							</header>
 							<section class="tiles">
-								<article class="style1">
+								<article class="style3">
 									<span class="image">
 										<img src="../assets/img/oliver-tn.jpg" alt="" />
 									</span>
@@ -82,7 +82,7 @@
 										</div>
 									</a>
 								</article>
-								<article class="style3">
+								<article class="style1">
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
@@ -202,7 +202,7 @@
 							<section>
 								<h2>Get in touch</h2>
 									<div class="row">
-										<div class="col-6 col-md-12">
+										<div class="col-6 col-12-medium">
 											<ul class="alt">
 												<li><a href="mailto:ost@alumni.cmu.edu" style="text-decoration:none;" class="fa fa-envelope"> ost@alumni.cmu.edu</a></li>
 												<li><a class="fa fa-phone"> (814) 360-7508</a></li>
