--- a/phantom/aboutme.html
+++ b/phantom/aboutme.html
@@ -58,12 +58,13 @@
 						<div class="inner">
 							<h1>About Me</h1>
 							<span class="image main"><img src="../assets/img/quad-meet.jpg" alt="" /></span>
-							<h3 id="bs-header">My Backstory (Brief)</h3>
-							<button id="story-link" onclick="toggleStory()" style="position:relative;float:right;bottom:64px;">Long</button>
+							<h3 id="bs-header">My Backstory</h3>
+							<!-- <button id="story-link" onclick="toggleStory()" style="position:relative;float:right;bottom:64px;">Long</button> -->
 							<div id="brief-story">
 							<p>I was born in Virginia, in a small suburb outside of Richmond called Midlothian. When I was in 4th grade, my family moved to State College, Pennsylvania where I spent the rest of my formative years.</p>
-							<p>I graduated from Carnegie Mellon in 2019 with a degree in Neuroscience. Feeling unsatisfied with life in academia, I chose to not pursue a Ph.D. and instead devote myself to something creative, challenging, and intellectually stimulating.</p>
-							<p>I am now a software developer.</p>
+							<p>I attended Carnegie Mellon University where I was a member of the Varsity Football and Track & Field teams. I graduated in 2019 with a degree in Neuroscience. Feeling unsatisfied with life in academia, I chose to not pursue a Ph.D.</p>
+							<p>I fell in love with software development because it is intellectually stimulating, challenging, and creative. In my two years of experience, I have been chief engineer of three web applications, two of which were developed by a software company I co-founded: <a href="https://greenstargroup.org" target="_blank">Greenstar Group, Inc</a>.</p>
+							<p></p>
 							</div>
 							<div id="long-story" style="display:none;">
 							<p>I was born in Virginia, in a small suburb outside of Richmond called Midlothian. When I was in 4th grade, my family moved to State College, Pennsylvania where I spent the rest of my formative years.</p>
@@ -97,7 +98,7 @@
 						<section>
 							<h2>Get in touch</h2>
 								<div class="row">
-									<div class="col-6 col-md-12">
+									<div class="col-6 col-12-medium">
 										<ul class="alt">
 											<li><a href="mailto:ost@alumni.cmu.edu" style="text-decoration:none;" class="fa fa-envelope"> ost@alumni.cmu.edu</a></li>
 											<li><a class="fa fa-phone"> (814) 360-7508</a></li>
