--- a/phantom/generic.html
+++ b/phantom/generic.html
@@ -64,7 +64,7 @@
 						<section>
 							<h2>Get in touch</h2>
 								<div class="row">
-									<div class="col-6 col-md-12">
+									<div class="col-6 col-12-medium">
 										<ul class="alt">
 											<li><a href="mailto:ost@alumni.cmu.edu" style="text-decoration:none;" class="fa fa-envelope"> ost@alumni.cmu.edu</a></li>
 											<li><a class="fa fa-phone"> (814) 360-7508</a></li>
