--- a/phantom/index.html
+++ b/phantom/index.html
@@ -27,7 +27,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="../assets/img/favicon.ico" alt="" /></span><span class="title">Welcome to ghoozie WRLD</span>
+									<span class="symbol"><img src="../assets/img/favicon.ico" alt="" /></span><span class="title">Welcome</span>
 								</a>
 
 							<!-- Nav -->
