--- a/phantom/aboutme.html
+++ b/phantom/aboutme.html
@@ -93,35 +93,35 @@
 					</div>
 
 				<!-- Footer -->
-				<footer id="footer">
-					<div class="inner">
-						<section>
-							<h2>Get in touch</h2>
-								<div class="row">
-									<div class="col-6 col-12-medium">
-										<ul class="alt">
-											<li><a href="mailto:ost@alumni.cmu.edu" style="text-decoration:none;" class="fa fa-envelope"> ost@alumni.cmu.edu</a></li>
-											<li><a class="fa fa-phone"> (814) 360-7508</a></li>
-											<li><a href="https://github.com/ghoozie" target="_blank" class="fas fa-laptop-code" aria-hidden="true"> GitHub</a></li>
-											<li><a href="https://instagram.com/ghoozie_" target="_blank" class="icon brands fas fa-instagram"> Instagram</a></li>
-										</ul>
+					<footer id="footer">
+						<div class="inner">
+							<section>
+								<h2>Get in touch</h2>
+									<div class="row">
+										<div class="col-6 col-12-medium">
+											<ul class="alt">
+												<li><a href="mailto:ost@alumni.cmu.edu" style="text-decoration:none;" class="fa fa-envelope"> ost@alumni.cmu.edu</a></li>
+												<li><a class="fa fa-phone"> (814) 360-7508</a></li>
+												<li><a href="https://linkedin.com/in/oliver-terrell" target="_blank" class="icon brands fas fa-linkedin" aria-hidden="true"> LinkedIn</a></li>
+												<li><a href="https://github.com/ghoozie" target="_blank" class="fas fa-laptop-code" aria-hidden="true"> GitHub</a></li>
+											</ul>
+										</div>
 									</div>
-								</div>
-						</section>
-						<section aria-hidden="true">
-							<h2>Follow</h2>
-							<ul class="icons">
-								<li><a href="https://instagram.com/ghoozie_" target="_blank" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="https://github.com/ghoozie" target="_blank" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="https://facebook.com/ghoozie1" target="_blank" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="mailto:ost@alumni.cmu.edu" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+							</section>
+							<section aria-hidden="true">
+								<h2>Follow</h2>
+								<ul class="icons">
+									<li><a href="https://instagram.com/ghoozie_" target="_blank" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://linkedin.com/in/oliver-terrell" target="_blank" class="icon brands style2 fa-linkedin"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/ghoozie" target="_blank" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="mailto:ost@alumni.cmu.edu" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+								</ul>
+							</section>
+							<ul class="copyright">
+								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
-						</section>
-						<ul class="copyright">
-							<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</div>
-				</footer>
+						</div>
+					</footer>
 
 			</div>
 
