--- a/phantom/index.html
+++ b/phantom/index.html
@@ -206,8 +206,8 @@
 											<ul class="alt">
 												<li><a href="mailto:ost@alumni.cmu.edu" style="text-decoration:none;" class="fa fa-envelope"> ost@alumni.cmu.edu</a></li>
 												<li><a class="fa fa-phone"> (814) 360-7508</a></li>
+												<!-- <li><a href="https://github.com/ghoozie" target="_blank" class="fas fa-laptop-code" aria-hidden="true"> GitHub</a></li> -->
 												<li><a href="https://linkedin.com/in/oliver-terrell" target="_blank" class="icon brands fas fa-linkedin" aria-hidden="true"> LinkedIn</a></li>
-												<li><a href="https://github.com/ghoozie" target="_blank" class="fas fa-laptop-code" aria-hidden="true"> GitHub</a></li>
 											</ul>
 										</div>
 									</div>
@@ -215,14 +215,14 @@
 							<section aria-hidden="true">
 								<h2>Follow</h2>
 								<ul class="icons">
+									<li><a href="https://linkedin.com/in/oliver-terrell" target="_blank" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://instagram.com/ghoozie_" target="_blank" class="icon brands style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="https://linkedin.com/in/oliver-terrell" target="_blank" class="icon brands style2 fa-linkedin"><span class="label">Instagram</span></a></li>
 									<li><a href="https://github.com/ghoozie" target="_blank" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="mailto:ost@alumni.cmu.edu" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li><code>&copy; ghoozie</code> All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</footer>
