--- a/phantom/aboutme.html
+++ b/phantom/aboutme.html
@@ -47,9 +47,9 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="aboutme.html">About Me</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="code.html">Code Samples</a></li>
+							<li><a href="projects.html">Projects</a></li>
+							<li><a href="#" onclick='window.open("https://linkedin.com/in/oliver-terrell");return false;'>LinkedIn&reg;</a></li>
 						</ul>
 					</nav>
 
