--- a/phantom/index.html
+++ b/phantom/index.html
@@ -46,9 +46,9 @@
 						<ul>
 							<li><a href="index.html">Home</a></li>
 							<li><a href="aboutme.html">About Me</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="code.html">Code Samples</a></li>
+							<li><a href="projects.html">Projects</a></li>
+							<li><a href="#" onclick='window.open("https://linkedin.com/in/oliver-terrell");return false;'>LinkedIn&reg;</a></li>
 						</ul>
 					</nav>
 
@@ -75,10 +75,10 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Lorem</h2>
+									<a href="projects.html">
+										<h2>Projects</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Details about projects I built currently deployed through Greenstar Group as well as my project graveyard.</p>
 										</div>
 									</a>
 								</article>
@@ -86,10 +86,10 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Feugiat</h2>
+									<a href="code.html">
+										<h2>Code Samples</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>View a few tools I made and other code samples with descriptions.</p>
 										</div>
 									</a>
 								</article>
@@ -97,10 +97,10 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Tempus</h2>
+									<a href="education.html">
+										<h2>Education</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Details about projects I built that never made it to deployment.</p>
 										</div>
 									</a>
 								</article>
