--- a/phantom/index.html
+++ b/phantom/index.html
@@ -78,7 +78,7 @@
 									<a href="projects.html">
 										<h2>Projects</h2>
 										<div class="content">
-											<p>Details about projects I built currently deployed through Greenstar Group as well as my project graveyard.</p>
+											<p>Details about currently deployed projects and my project graveyard.</p>
 										</div>
 									</a>
 								</article>
