--- a/phantom/generic.html
+++ b/phantom/generic.html
@@ -11,6 +11,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+	<!-- Favicon -->
+	<link rel="apple-touch-icon" sizes="180x180" href="../assets/img/favicon.ico">
+	<link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon.ico">
+
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
